implement HTTP API and optimize IT test
